# bookworm

./: README  README.md
api/: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  seed_data.py
api/alembic/: env.py
api/alembic/versions/: 106c4373cb1c_remove_user_id_from_reviews.py  14b64ac84bb8_add_review.py  29c9464bf0f0_add_order_orderitem.py  407f4abb5513_change_id_type_to_bigint.py  5fd0d9611184_initiate_with_user.py  8d3556208804_add_book.py  969b333e0e85_remove_user_relationship_with_reviews.py  c22da265b427_remove_status_on_order.py  c4c2b9602834_add_author.py  cc5c2d8a8d75_add_category.py  d385347b4a8c_change_orderitem_table_name_to_order_.py  ded3d8efc7d6_add_discount.py  f839d051f47c_add_token_blacklist.py
api/src/: config.py  database.py  exceptions.py  main.py  models.py  pagination.py
api/src/auth/: dependencies.py  exceptions.py  models.py  router.py  service.py
api/src/author/: models.py  router.py  service.py
api/src/book/: exceptions.py  models.py  router.py  service.py
api/src/cart/: exceptions.py
api/src/category/: models.py  router.py  service.py
api/src/discount/: exceptions.py  models.py  router.py  service.py
api/src/order/: exceptions.py  models.py  router.py  service.py
api/src/review/: exceptions.py  models.py  router.py  service.py
client/: package.json
fe-client/: index.html  package.json
fe-client/src/: routeTree.gen.ts
fe-client/src/components/: BookCard.tsx  Footer.tsx  Header.tsx  Pagination.tsx  QuantityInput.tsx  RatingStars.tsx  SignInModal.tsx
(+17 files in other folders)
