[project]
name = "bookworm-api"
version = "0.1.0"
description = "API for NashTech Bookworm Assignment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.29.0",
    "sqlmodel>=0.0.16",
    "psycopg[binary]>=3.1.18",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "alembic>=1.13.1",
    "pydantic-settings>=2.2.1",
    "pydantic[email]>=2.11.3",
    "bcrypt>=4.3.0",
    "pytest>=8.3.5",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "faker>=37.1.0",
    "isort>=6.0.1",
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
testpaths = tests # Tell pytest where to find tests
python_files = test_*.py *_test.py
addopts = -ra -q --cov=backend --cov-report=term-missing # Example options: report reasons for skip/xfail, quiet, add coverage for 'backend' code